# onlineHwrHandedness

./: .gitignore  Makefile  Makefile.debian.in  Makefile.in  Makefile.windows.in  README.md  TODO  config  configure.in  dist-config.sh  enduser-license.in  i686-w64-mingw32.static-crosstools-gen.sh  lupdate.sh  mxe.sh  onlinehwrhandedness.desktop.in  source.mk  ubuntu.sh
Original/: detectHandedness.py  pluss.py  run.sh
debian/: changelog.in  control.in  dbg.install.in  pkg.install.in  rules.cross.in  rules.native.in
nsis/: install.nsi.in
share/icons/: copyright
share/translations/: en.ts  hu.ts
src/: config.h.in  h_config.cpp  h_config.h  h_conversions.h  h_data.cpp  h_data.h  h_exception.h  h_macros.h  h_texts.cpp  h_texts.h
src/qt/: h_application.cpp  h_application.h  h_mainview.cpp  h_mainview.h  h_plot.cpp  h_plot.h  main.cpp
